@@ -15,6 +15,7 @@
     * Added dropper block
     * Added nether quartz ore block
     * Added quartz block
+    * Added activator rail
     * Allow opening read-only region files
     * If sunlight is disabled the sun will not be rendered
     * It is now possible to disable mirroring the sky at the horizon
